Able to see how many active users are in the chatroom

--- a/styles/home.scss
+++ b/styles/home.scss
@@ -76,6 +76,11 @@ body {
       top: 0;
     }
 
+.members {
+  text-align: right;
+  font-size: 20px;
+  margin-top: 1em;
+}
     .navbar-brand {
       color: inherit;
       display: block;
